--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,23 +17,23 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
-  app:
-    build: .
-    container_name: emochat-app
-    restart: always
-    depends_on:
-      - db
-    env_file:
-      - .env
-    environment:
-      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
-      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
-      SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
-    ports:
-      - "8080:8080"
-    volumes:
-      - .:/app
+#  app:
+#    build: .
+#    container_name: emochat-app
+#    restart: always
+#    depends_on:
+#      - db
+#    env_file:
+#      - .env
+#    environment:
+#      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+#      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+#      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+#      SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
+#    ports:
+#      - "8080:8080"
+#    volumes:
+#      - .:/app
 
 volumes:
   mysql_data:
